--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.3.17",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
+    "katex": "^0.16.25",
     "lenis": "^1.1.6",
     "lucide-react": "^0.416.0",
     "motion": "^12.23.24",
@@ -38,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-katex": "^3.1.0",
     "react-use-measure": "^2.1.7",
     "resend": "^4.0.0",
     "sass": "^1.77.8",
